@@ -5,6 +5,7 @@
 #include "tokenizer.hpp"
 #include <crow.h>
 #include <fmt/format.h>
+#include <jsoncons/json.hpp>
 
 using json = jsoncons::json;
 
@@ -31,7 +32,7 @@ private:
     bool get_sql_statement(json& response_json, crow::response& res, std::optional<std::string>& query, T w)
     {
         query = w();
-        std::cout << query.value() << std::endl;
+
         if (query->empty()) {
             rHelper->format_response(response_json, -1, "failure", "failed to synthesize query");
             rHelper->finish_response(res, 400, response_json);
